--- a/cargo/templates/cgo_homepage_templates.html
+++ b/cargo/templates/cgo_homepage_templates.html
@@ -1,14 +1,12 @@
 <a href="">IC</a>
 <br>
-<a href="">Traffic</a>
+<a href="{% url 'cgo_traffic_homepage' %}">Traffic</a>
 <br>
-<a href="{% url 'cgo_fr_homepage' %}">Reservation</a>
+<a href="{% url 'cgo_fr_homepage' %}">Reservation & Accouting</a>
 <br>
 <a href="">Sales</a>
 <br>
 <a href="{% url 'cgo_desk_homepage' %}">Desk</a>
-<br>
-<a href="">Accounting</a>
 <br>
 <a href="">General Affairs</a>
 <br>
