--- a/cargo/templates/cgo_desk_homepage_templates.html
+++ b/cargo/templates/cgo_desk_homepage_templates.html
@@ -1,1 +1,3 @@
 <a href="{% url 'desk_importspecialcgo_upload' %}">Import Special Cargo</a>
+<br>
+<a href="{% url 'desk_uldstorage_result' %}">ULD Storage</a>
