--- a/cargo/templates/cgo_traffic_homepage_templates.html
+++ b/cargo/templates/cgo_traffic_homepage_templates.html
@@ -4,7 +4,7 @@
 <br>
 <p>CSP</p>
 
-<a href="{% url 'cgo_traffic_scsforotherairlines_upload' %}"">SCS For Other Airlines</a>
+<a href="{% url 'cgo_traffic_scsforotherairlines_upload' %}">SCS For Other Airlines</a>
 <br>
 <br>
 <br>
