--- a/cargo/templates/cgo_desk_importspecialcgo_result_templates.html
+++ b/cargo/templates/cgo_desk_importspecialcgo_result_templates.html
@@ -20,8 +20,25 @@
     <br>--------- 
     <br>
 {% endfor %}
-
 <p>----------------------------------------------</p>
+<p>*****到达JPH货物*****</p>
+{% for jph in jph_list %}
+    {{jph.0}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{{jph.5}}P<br>
+    {%for uld in jph.2%}
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{{uld.0}}&nbsp&nbsp&nbsp&nbsp{{uld.1}}P<br>
+    {%endfor%}
+    <br>--------- 
+    <br>
+{% endfor %}
+<p>----------------------------------------------</p>
+<p>*****到达中转货物*****</p>
+{% for trst in trst_list %}
+    {{trst.0}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp目的港：{{jph.1}}
+    <br>--------- 
+    <br>
+{% endfor %}
+<p>----------------------------------------------</p>
+
 <p>*****北货站留场清单*****</p>
 {% if avi_list  %}
 <p>---AVI---</p>
@@ -59,7 +76,7 @@
 
 <p>*****温控要求货物清单*****</p>
 {% for temperature in temperature_list %}
-    {{temperature.0}}&nbsp&nbsp&nbsp&nbsp&nbsp{{temperature.5}}P&nbsp&nbsp&nbsp&nbsp&nbsp{{temperature.6}}K&nbsp&nbsp&nbsp&nbsp&nbsp整板交接：是/否&nbsp&nbsp&nbsp&nbsp&nbsp温控要求：常温/冷藏/冷冻/深冻&nbsp&nbsp&nbsp&nbsp&nbsp备注：
+    {{temperature.0}}&nbsp&nbsp&nbsp&nbsp&nbsp{{temperature.5}}P&nbsp&nbsp&nbsp&nbsp&nbsp{{temperature.6}}K&nbsp&nbsp&nbsp&nbsp&nbsp温控要求：常温/冷藏/冷冻/深冻&nbsp&nbsp&nbsp&nbsp&nbsp备注：
     {%for uld in temperature.2%}
         <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{{uld.0}}&nbsp&nbsp&nbsp&nbsp{{uld.1}}P&nbsp&nbsp&nbsp&nbsp{{uld.2}}KG
     {%endfor%}  
