--- a/cargo/templates/cgo_desk_importspecialcgo_result_templates.html
+++ b/cargo/templates/cgo_desk_importspecialcgo_result_templates.html
@@ -33,7 +33,7 @@
 <p>----------------------------------------------</p>
 <p>*****到达中转货物*****</p>
 {% for trst in trst_list %}
-    {{trst.0}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp目的港：{{jph.1}}
+    {{trst.0}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp目的港：{{trst.1}}&nbsp&nbsp&nbsp{{trst.2}}
     <br>--------- 
     <br>
 {% endfor %}
