--- a/cargo/templates/cgo_fr_homepage_templates.html
+++ b/cargo/templates/cgo_fr_homepage_templates.html
@@ -1,2 +1,7 @@
-<a href="{%url 'fr_cargosalesreport_upload'%}">Cargo Sales Report Cross Check</a>
+<a href="{%url 'fr_cargosalesreport_upload'%}">Cargo Sales Report PDF_PDF Cross Check</a>
+<br>
+<br>
+<br>
+<br>
+<a href="{%url 'fr_cargosalesreport_pdfexcel_upload'%}">Cargo Sales Report PDF_EXCEL Cross Check</a>
 <br>
