--- a/cargo/templates/cgo_traffic_scsforotherairlines_upload_templates.html
+++ b/cargo/templates/cgo_traffic_scsforotherairlines_upload_templates.html
@@ -4,7 +4,7 @@
 {% csrf_token %}
     <br>
     <br>  	 
-     Flight WD   <input type="file" name="weightdep">
+     Flight WD   <input type="file" name="weightdep" accept=".pdf">
     <br>
     <br>
   	  MAIL1: 131-<input type="text" name="mailawb1" />  DSTN: <input type="text" name="maildstn1" /><br>
