--- a/cargo/templates/cgo_traffic_homepage_templates.html
+++ b/cargo/templates/cgo_traffic_homepage_templates.html
@@ -3,9 +3,9 @@
 
 <br>
 <p>CSP</p>
-
 <a href="{% url 'cgo_traffic_scsforotherairlines_upload' %}">SCS For Other Airlines</a>
 <br>
+<a href="{% url 'traffic_notallowedcargo_upload' %}">CSP Suspicious Goods and Country Data Check</a>
 <br>
 <br>
 <p>LC</p>
