--- a/cargo/templates/cgo_traffic_notallowedcargo_upload_templates.html
+++ b/cargo/templates/cgo_traffic_notallowedcargo_upload_templates.html
@@ -1,10 +1,10 @@
-<p>Cargo notallowedcargo</p>
+<p>CSP DATA CHECK UPLOAD</p>
 
 <form action="{% url 'traffic_notallowedcargo_result' %}" method="post" enctype="multipart/form-data">
 {% csrf_token %}
     <br>
-    <br>  	 
-     manifest   <input type="file" name="manifest">
+    <br>
+        <p>Air Cargo Manifest：   <input type="file" name="manifest" accept=".pdf"></p>
     <br>
 
     <br>
