--- a/cargo/templates/cgo_fr_homepage_templates.html
+++ b/cargo/templates/cgo_fr_homepage_templates.html
@@ -5,3 +5,8 @@
 <br>
 <a href="{%url 'fr_cargosalesreport_pdfexcel_upload'%}">Cargo Sales Report PDF_EXCEL Cross Check</a>
 <br>
+<br>
+<br>
+<br>
+<a href="{%url 'fr_cargosalesreport_excelexcel_upload'%}">Cargo Sales Report EXCEL_EXCEL Cross Check</a>
+<br>
